# agin-auth

./: Cargo.toml  clippy.toml  compose.yaml
apps/frontend/lib/hooks/: use-login-success.ts  use-webauthn-core.ts  use-webauthn-passwordless.ts
auth-core/src/: factors.rs  flow.rs  user_id.rs
auth-core/src/factors/: state.rs
entity/: Cargo.toml
entity/src/: application.rs  auth_method.rs  authorization_code.rs  email_confirmation_token.rs  lib.rs  password.rs  password_reset_token.rs  pgp.rs  recovery_code.rs  refresh_token.rs  revoked_access_token.rs  session.rs  totp.rs  user.rs  webauthn.rs
macros/: Cargo.toml
macros/src/: factor.rs  lib.rs  register.rs
macros/src/register/: entry.rs
mail/: Cargo.toml
mail/src/: lib.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250101_000001_initial.rs
server/: Cargo.toml
server/src/: auth_method_helpers.rs  axum_error.rs  database.rs  main.rs  oidc.rs  routes.rs  settings.rs  state.rs  utils.rs
server/src/factors/: password.rs
server/src/middlewares/: require_auth.rs
server/src/routes/: api.rs  oidc_routes.rs  well_known.rs
server/src/routes/api/: applications.rs  confirm_email.rs  login.rs  logout.rs  password_reset.rs  register.rs
server/src/routes/api/admin/: applications.rs
server/src/routes/api/login/: password.rs  recovery_codes.rs  totp.rs
server/src/routes/api/login/pgp/: challenge.rs
server/src/routes/api/login/webauthn/: finish.rs  helpers.rs  start.rs
server/src/routes/api/login/webauthn/passwordless/: finish.rs
server/src/routes/api/settings/: account.rs  factors.rs  password.rs  profile.rs  sessions.rs
server/src/routes/api/settings/factors/: recovery_codes.rs
server/src/routes/api/settings/factors/pgp/: delete.rs  disable.rs  enable.rs
server/src/routes/api/settings/factors/recovery_codes/: enable.rs  reset.rs
server/src/routes/api/settings/factors/totp/: disable.rs  enable.rs
server/src/routes/api/settings/factors/totp/enable/: confirm.rs
server/src/routes/api/settings/factors/webauthn/: delete.rs  finish.rs  start.rs
(+8 files in other folders)
